contact form styling bug on ios

--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -54,13 +54,17 @@
       form {
         display: flex;
         flex-direction: column;
-        width: 80%;
-        margin: auto;
+        width: 100%;
 
         label {
-          padding-top: 15px;
-          padding-bottom: 5px;
+          padding-top: 20px;
+          padding-bottom: 10px;
           font-size: 18px;
+        }
+
+        input, textarea {
+          -webkit-appearance: none;
+          border-radius: 0;
         }
 
         input[type='text'], input[type='email'], input[type='tel'], textarea {
